--- a/NavegadorWeb/pom.xml
+++ b/NavegadorWeb/pom.xml
@@ -16,6 +16,13 @@
             <artifactId>javafx-controls</artifactId>
             <version>23.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>23.0.1</version>
+        </dependency>
+
 
     </dependencies>
     <build>
