--- a/NavegadorWeb/pom.xml
+++ b/NavegadorWeb/pom.xml
@@ -22,7 +22,12 @@
             <artifactId>javafx-web</artifactId>
             <version>23.0.1</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/de.jensd/fontawesomefx-fontawesome -->
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx-fontawesome</artifactId>
+            <version>4.7.0-9.1.2</version>
+        </dependency>
 
     </dependencies>
     <build>
